<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reggister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_header_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:text="Register"
            android:textColor="@color/background"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/isi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/separator"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/separator"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/separator"
            android:hint="Phone Number"
            android:inputType="phone"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:buttonTint="@color/lightblue"
                android:text="@string/male"
                android:textColor="@color/separator"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:buttonTint="@color/lightblue"
                android:text="@string/female"
                android:textColor="@color/separator"
                android:textSize="14sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Spinner
                android:id="@+id/Spin_bloodType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:entries="@array/bloodtype" />

            <Spinner
                android:id="@+id/Spin_reshus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:entries="@array/reshus"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/separator"
            android:hint="@string/password"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_RPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/separator"
            android:hint="Retype Password"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="5.5"
                android:buttonTint="@color/lightblue"
                android:text="@string/personal"
                android:textColor="@color/separator"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:buttonTint="@color/lightblue"
                android:text="Organization"
                android:textColor="@color/separator"
                android:textSize="14sp" />
        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:entries="@array/job"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/separator"
            android:hint="@string/home_address"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/separator"
            android:drawableEnd="@drawable/ic_blood_needed_location"
            android:hint="@string/default_location"
            android:paddingBottom="15dp"
            android:textSize="14sp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/lightblue"
            android:paddingLeft="10dp"
            android:text="@string/agree"
            android:textColor="@color/separator" />

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:text="@string/register2"
            android:textColor="@color/lightblue" />
    </LinearLayout>

</RelativeLayout>