<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_welcome_logo" />

        <EditText
            android:id="@+id/edt_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/background"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/background"
            android:textColorHint="@color/background" />

        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_Username"
            android:backgroundTint="@color/background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/background"
            android:textColorHint="@color/background" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/edt_Password"
            android:layout_marginTop="20dp"
            android:background="@drawable/custombutton1"
            android:text="@string/login"
            android:textColor="@color/background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Login"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_ConnectFB"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/tv_OR"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custombutton1"
            android:drawableStart="@drawable/ic_welcome_fb_login"
            android:paddingStart="60dp"
            android:paddingRight="55dp"
            android:text="@string/connect_with_facebook"
            android:textColor="@color/background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_DHAccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_ConnectFB"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="doesn't have account?"
            android:textAlignment="center"
            android:textColor="@color/background" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_ConnectFB"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/tv_DHAccount"
            android:text="Register"
            android:textColor="@color/background"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>